scripts/nullaway/nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8.txt
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/visitor/ArithmeticExpressionEvaluator.java:23: error: [NullAway] parameter expression is @NonNull, but parameter in superclass method org.patterneria.visitor.ArithmeticExpressionVisitor.visit(org.patterneria.visitor.ConstantExpression) is @Nullable
    public void visit(ConstantExpression expression) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/visitor/ArithmeticExpressionEvaluator.java:32: error: [NullAway] parameter expression is @NonNull, but parameter in superclass method org.patterneria.visitor.ArithmeticExpressionVisitor.visit(org.patterneria.visitor.BinaryArithmeticExpression) is @Nullable
    public void visit(BinaryArithmeticExpression expression) {
                                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/visitor/ArithmeticExpressionEvaluator.java:61: error: [NullAway] parameter expression is @NonNull, but parameter in superclass method org.patterneria.visitor.ArithmeticExpressionVisitor.visit(org.patterneria.visitor.NegateExpression) is @Nullable
    public void visit(NegateExpression expression) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/visitor/ArithmeticExpressionPrettyPrinter.java:15: error: [NullAway] parameter expression is @NonNull, but parameter in superclass method org.patterneria.visitor.ArithmeticExpressionVisitor.visit(org.patterneria.visitor.ConstantExpression) is @Nullable
    public void visit(ConstantExpression expression) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/visitor/ArithmeticExpressionPrettyPrinter.java:25: error: [NullAway] parameter expression is @NonNull, but parameter in superclass method org.patterneria.visitor.ArithmeticExpressionVisitor.visit(org.patterneria.visitor.BinaryArithmeticExpression) is @Nullable
    public void visit(BinaryArithmeticExpression expression) {
                                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/visitor/ArithmeticExpressionPrettyPrinter.java:37: error: [NullAway] parameter expression is @NonNull, but parameter in superclass method org.patterneria.visitor.ArithmeticExpressionVisitor.visit(org.patterneria.visitor.NegateExpression) is @Nullable
    public void visit(NegateExpression expression) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/strategy/StrategyPatternTutorial.java:8: error: [NullAway] @NonNull field learningStrategy not initialized
    StrategyPatternLearningStrategy learningStrategy;
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/factory/Theatre.java:49: error: [NullAway] initializer method does not guarantee @NonNull fields name (line 10), repertoire (line 14) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Theatre(TheatreDirector director) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/bridge/Camera.java:11: error: [NullAway] @NonNull field lightRecorder not initialized
    private LightSensitiveMedium lightRecorder;
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/state/IncomingCall.java:28: error: [NullAway] parameter phone is @NonNull, but parameter in superclass method org.patterneria.state.PhoneState.answer(org.patterneria.state.Phone) is @Nullable
    public void answer(Phone phone) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/state/IncomingCall.java:37: error: [NullAway] parameter phone is @NonNull, but parameter in superclass method org.patterneria.state.PhoneState.ignore(org.patterneria.state.Phone) is @Nullable
    public void ignore(Phone phone) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/state/Dialing.java:20: error: [NullAway] parameter phone is @NonNull, but parameter in superclass method org.patterneria.state.PhoneState.endCall(org.patterneria.state.Phone) is @Nullable
    public void endCall(Phone phone) {
                              ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/state/Idle.java:12: error: [NullAway] parameter phone is @NonNull, but parameter in superclass method org.patterneria.state.PhoneState.dial(org.patterneria.state.Phone) is @Nullable
    public void dial(Phone phone) {
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/Station.java:36: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(name, null);
                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:77: error: [NullAway] initializer method does not guarantee @NonNull fields previousStop (line 56), nextStop (line 58) are initialized along all control-flow paths (remember to check for exceptions or early returns).
        public Stop(Station name) {
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:101: error: [NullAway] dereferenced expression this.current is @Nullable
            Station next = this.current.getStation();
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:130: error: [NullAway] dereferenced expression current is @Nullable
            Station next = current.station;
                                  ^
    (see http://t.uber.com/nullaway )
17 errors
